Fix overlapping filename in inventory table [SCI-9199] (#6579)

--- a/app/assets/stylesheets/repositories.scss
+++ b/app/assets/stylesheets/repositories.scss
@@ -226,7 +226,6 @@
 
   .file-preview-link {
     display: inline-block;
-    min-width: 140px;
     padding-left: 5px;
   }
 }
